# ebac_m13_bookstore

./: Dockerfile  Makefile  README.md  docker-compose.yml  env.dev  manage.py  pyproject.toml  pytest.ini  requirements.txt  requirements_minimal.txt
.github/workflows/: build.yml  workflow-pr.yml
ebac_m13_bookstore/: asgi.py  settings.py  urls.py  views.py  wsgi.py
ebac_m13_bookstore/templates/: hello_world.html
order/: urls.py
order/migrations/: 0001_initial.py  0002_order_created_at_order_status.py
order/models/: order.py
order/serializers/: __init__.py  order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: admin.py  urls.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: __init__py  category_serializer.py  product_serializer.py
product/tests/test_serializers/: test_category_serializer.py  test_product_serializer.py
product/tests/test_viewsets/: test_product_viewset.py
product/viewsets/: product_viewset.py
tests/factories/: order_factory.py
tests/order/: test_models.py  test_serializer.py
tests/product/: test_models.py  test_serializer.py  test_serializers.py
